<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B9DDB4E4"
    tools:context=".WorkoutActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#B34BB5E4"
        android:fitsSystemWindows="true"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/Workout"
        app:titleTextColor="@android:color/white">
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textview5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="18dp"
        android:text="@string/WorkoutReminder"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pick_time_button2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.165" />

    <Button
        android:id="@+id/pick_time_button2"
        android:layout_width="82dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:background="#F8EBEB"
        android:text="@string/PickTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/time_text_view2"
        android:layout_width="84dp"
        android:layout_height="22dp"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif-black"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.859"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/HourMinute2" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="301dp"
        android:layout_height="46dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.231">

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/blue"/>

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/blue"/>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/blue"/>

        <CheckBox
            android:id="@+id/checkBox6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/blue"/>

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/blue"/>

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/blue"/>

        <CheckBox
            android:id="@+id/checkBox7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/blue"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="319dp"
        android:layout_height="21dp"
        android:layout_marginTop="172dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="M" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="T" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="44dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="W" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="T" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="46dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="F" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="43dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="S" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="43dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="S" />
    </LinearLayout>

    <Button
        android:layout_width="212dp"
        android:layout_height="38dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="174dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="#F8EBEB"
        android:text="@string/AddWorkoutTime"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="362dp"
        android:layout_height="309dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="41dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:layout_constraintVertical_bias="0.607">

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="#F8EBEB"
            android:text="@string/Legs" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="#F8EBEB"
            android:text="@string/Abs" />

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="#F8EBEB"
            android:text="@string/Arms" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="#F8EBEB"
            android:text="@string/UpperBody" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="#F8EBEB"
            android:text="@string/FullBody" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="109dp"
        android:layout_marginBottom="13dp"
        android:text="@string/PickWorkout"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>