<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5E719EBC"
    tools:context=".WaterIntakeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#B34BB5E4"
        android:fitsSystemWindows="true"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/WaterIntake"
        app:titleTextColor="@android:color/white">
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="241dp"
        android:layout_height="72dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/StayHydrated"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="126dp"
        android:layout_height="520dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="56dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout7"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <CheckBox
            android:id="@+id/checkBox8"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:buttonTint="@color/pink"
            android:text="@string/Cup1"
            android:textColorLink="#B285BA" />

        <CheckBox
            android:id="@+id/checkBox9"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:buttonTint="@color/pink"
            android:text="@string/Cup2"
            android:textColorLink="#B285BA" />

        <CheckBox
            android:id="@+id/checkBox10"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:buttonTint="@color/pink"
            android:text="@string/Cup3"
            android:textColorLink="#B285BA" />

        <CheckBox
            android:id="@+id/checkBox11"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:buttonTint="@color/pink"
            android:text="@string/Cup4"
            android:textColorLink="#B285BA" />

        <CheckBox
            android:id="@+id/checkBox12"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:buttonTint="@color/pink"
            android:text="@string/Cup5"
            android:textColorLink="#B285BA" />

        <CheckBox
            android:id="@+id/checkBox13"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:buttonTint="@color/pink"
            android:text="@string/Cup6"
            android:textColorLink="#B285BA" />

        <CheckBox
            android:id="@+id/checkBox14"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:buttonTint="@color/pink"
            android:text="@string/Cup7"
            android:textColorLink="#B285BA" />

        <CheckBox
            android:id="@+id/checkBox16"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:buttonTint="@color/pink"
            android:text="@string/Cup8"
            android:textColorLink="#B285BA" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="72dp"
        android:layout_height="526dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="44dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="80dp"
            android:layout_height="62dp"
            app:srcCompat="@drawable/glass_of_water" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="80dp"
            android:layout_height="62dp"
            app:srcCompat="@drawable/glass_of_water" />

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="80dp"
            android:layout_height="62dp"
            app:srcCompat="@drawable/glass_of_water" />

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="80dp"
            android:layout_height="62dp"
            app:srcCompat="@drawable/glass_of_water" />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="80dp"
            android:layout_height="62dp"
            app:srcCompat="@drawable/glass_of_water" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="80dp"
            android:layout_height="62dp"
            app:srcCompat="@drawable/glass_of_water" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="80dp"
            android:layout_height="62dp"
            app:srcCompat="@drawable/glass_of_water" />

        <ImageView
            android:id="@+id/imageView21"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            app:srcCompat="@drawable/glass_of_water" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="21dp"
        android:layout_height="517dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/textView28"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:text="1"
            android:textColor="#CBCCAED1"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:text="2"
            android:textColor="#CBCCAED1"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:text="3"
            android:textColor="#CBCCAED1"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:text="4"
            android:textColor="#CBCCAED1"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:text="5"
            android:textColor="#CBCCAED1"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:text="6"
            android:textColor="#CBCCAED1"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:text="7"
            android:textColor="#CBCCAED1"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:text="8"
            android:textColor="#CBCCAED1"
            android:textSize="36sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>